# SpaceScanner

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: avr-gcc.toolchain.cmake
doc/: DESIGN  SpaceScanner.ipynb  fsm.dot
src/: CMakeLists.txt  anim.c  anim.h  config.h  crc7.c  crc7.h  dac.c  dac.h  dbg.c  dbg.h  dht22.c  dht22.h  ftseg.c  ftseg.h  ftseg_data.c  fx.c  fx.h  ht16k33.c  ht16k33.h  led_gamma.c  led_gamma.h  main.c  neopixels.c  neopixels.h  sdcard.c  sdcard.h  spi.c  spi.h  timer.c  timer.h  twi_master.c  twi_master.h  uart.c  uart.h
